frontend/test/should_fail/index_pattern_edge_fromto_argument2_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	-e:E{ascending(Ei >= 42, Ei <= 44.0)}->;
	
	modify {
	}
}
